fixed map display at min-width 1520px, semantics for map role, restaurant name headers, and added image alt text for main page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <main id="maincontent">
     <section id="map-container">
-      <div id="map" role="application"></div>
+      <div id="map" role="application" aria-label="Mapbox Map"></div>
     </section>
     <section id="filter-list-container">
       <div class="filter-options">
